force-app/main/default/objects/Implementation_Milestone__c/Implementation_Milestone__c.object-meta.xml
<CustomObject>
<label
  >Implementation Milestone</label><pluralLabel
  >Implementation Milestones</pluralLabel>
    <nameField><displayFormat>IML-{00000000}</displayFormat><label
    >Milestone Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>