force-app/main/default/objects/Implementation_Milestone__c/fields/Customer_Acceptance_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Acceptance Required</label>
    <type>Checkbox</type>
</CustomField>