force-app/main/default/objects/Implementation_Milestone__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Kickoff</fullName><default>true</default><label
        >Kickoff</label></value>
            <value><fullName>Discovery</fullName><default>false</default><label
        >Discovery</label></value>
            <value><fullName>Solution Design</fullName><default
        >false</default><label>Solution Design</label></value>
            <value><fullName>Configuration</fullName><default
        >false</default><label>Configuration</label></value>
            <value><fullName>Data Migration</fullName><default
        >false</default><label>Data Migration</label></value>
            <value><fullName>Integration</fullName><default
        >false</default><label>Integration</label></value>
            <value><fullName>Testing</fullName><default>false</default><label
        >Testing</label></value>
            <value><fullName>Training</fullName><default>false</default><label
        >Training</label></value>
            <value><fullName>User Acceptance Testing</fullName><default
        >false</default><label>User Acceptance Testing</label></value>
            <value><fullName>Go-Live Readiness</fullName><default
        >false</default><label>Go-Live Readiness</label></value>
            <value><fullName>Go-Live</fullName><default>false</default><label
        >Go-Live</label></value>
            <value><fullName>Post Go-Live Review</fullName><default
        >false</default><label>Post Go-Live Review</label></value>
            <value><fullName>Hypercare</fullName><default>false</default><label
        >Hypercare</label></value>
            <value><fullName>Documentation</fullName><default
        >false</default><label>Documentation</label></value>
            <value><fullName>Handoff to Customer Success</fullName><default
        >false</default><label>Handoff to Customer Success</label></value>
            <value><fullName>Custom</fullName><default>false</default><label
        >Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>