force-app/main/default/objects/Implementation_Milestone__c/fields/Owner_Participant__c.field-meta.xml
<CustomField>
    <fullName>Owner_Participant__c</fullName>
    <label>Owner Participant</label>
    <type>Lookup</type>
    <referenceTo>Implementation_Participant__c</referenceTo>
    <relationshipLabel>Owned Milestones</relationshipLabel>
    <relationshipName>Owned_Milestones</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>