force-app/main/default/objects/Implementation_Milestone__c/fields/Owner_Partner__c.field-meta.xml
<CustomField>
    <fullName>Owner_Partner__c</fullName>
    <label>Owner Partner</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Owned Milestones</relationshipLabel>
    <relationshipName>Owned_Milestones</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>