force-app/main/default/objects/Implementation_Milestone__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <label>Owner User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Milestones</relationshipLabel>
    <relationshipName>Owned_Milestones</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>