force-app/main/default/objects/Implementation_Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Trimmed from the architecture doc's 11 values to the 5
  ImplementationMilestoneCommandService's commands actually produce.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label
        >Not Started</label></value>
            <value><fullName>In Progress</fullName><default
        >false</default><label>In Progress</label></value>
            <value><fullName>Blocked</fullName><default>false</default><label
        >Blocked</label></value>
            <value><fullName>Waived</fullName><default>false</default><label
        >Waived</label></value>
            <value><fullName>Completed</fullName><default>false</default><label
        >Completed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>